new dashboard added

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<section class="spotlight style2 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left onload-image-fade-in onload-content-fade-left" id="first">
 						<div class="content">
 							<h2>Task Organiser</h2>
-							<p>This app was created to help manage individual tasks that people had to complete on a daily basis.<br>
+							<p>This app was created to help manage individual tasks that people have to complete on a daily basis.<br>
 							It allows the user to enter new and manage existing tasks; view separate lists of tasks that are due, overdue and recently completed; and view a dashboard of interactive graphs, making it easier to manage their daily tasks.</p>
 							<span class="button-wrapper">
 								<ul class="actions stacked">
