--- a/portfolio_3.html
+++ b/portfolio_3.html
@@ -20,7 +20,7 @@
 					<section class="spotlight style4 orient-left content-align-left image-position-center onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h2>Task Organiser</h2>
-							<p>This app was created to help manage individual tasks that people had to complete on a daily basis.<br>
+							<p>This app was created to help manage individual tasks that people have to complete on a daily basis.<br>
 							It allows the user to enter new and manage existing tasks; view separate lists of tasks that are due, overdue and recently completed; and view a dashboard of interactive graphs, making it easier to manage their daily tasks.<br><br>
 							This app was built in a Flask framework, and is connected to a simple postgres database using SQLAlchemy. The tables and graphs were created using pandas and bokeh. HTML and CSS were used to create the front end of the application. <br><br>
 							See the gif below for more details.</p>
